# env-coach

./: .gitignore  Cargo.toml  README.md  project.json
docs/: EXAMPLES.md
examples/rust-cli-example/: README.md
examples/rust-web-example/: README.md
src/: auto_update.rs  auto_update_test.rs  config.rs  main.rs  ollama.rs  prompts.rs  templates.rs
src/auto_update/: cargo_toml_updater.rs  code_gen.rs  doc_gen.rs  llm_parsers.rs  mod.rs  tests.rs  text_utils.rs  updater.rs
src/scripts/: backlog.rs  init.rs  llm_cycle.rs  mod.rs  requirements.rs  sprint.rs  status.rs  stories.rs  tasks.rs
